[package]
name = "bmw"
version = "0.0.2-beta.1"
authors = ["BitcoinMW Developers <bitcoinmw@protonmail.com>"]
description = "Simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format with installation of the Bitcoin UTXO set."
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/bitcoinmw"
keywords = [ "crypto", "bitcoinmw", "mimblewimble" ]
readme = "README.md"
exclude = ["**/*.bmw", "**/*.bmw"]
build = "src/build/build.rs"
edition = "2018"

[workspace]
members = ["api", "chain", "config", "core", "keychain", "p2p", "servers", "store", "util", "pool", "utxo"]
exclude = ["etc/gen_gen", "etc/gen_log", "etc/gen_bin", "etc/perf", "etc/analysis"]

[[bin]]
name = "bmw"
path = "src/bin/bmw.rs"

[dependencies]
blake2-rfc = "0.2"
chrono = "0.4.11"
clap = { version = "2.33", features = ["yaml"] }
ctrlc = { version = "3.1", features = ["termination"] }
humansize = "1.1.0"
serde = "1"
serde_json = "1"
log = "0.4"
term = "0.6"
failure = "0.1"
failure_derive = "0.1"

grin_api = { path = "./api", version = "0.0.2-beta.1" }
grin_config = { path = "./config", version = "0.0.2-beta.1" }
grin_chain = { path = "./chain", version = "0.0.2-beta.1" }
grin_core = { path = "./core", version = "0.0.2-beta.1" }
grin_keychain = { path = "./keychain", version = "0.0.2-beta.1" }
grin_p2p = { path = "./p2p", version = "0.0.2-beta.1" }
grin_servers = { path = "./servers", version = "0.0.2-beta.1" }
grin_util = { path = "./util", version = "0.0.2-beta.1" }
bmw_utxo = { path = "./utxo", version = "0.0.2-beta.1" }


[dependencies.cursive]
version = "0.15"
default-features = false
features = ["pancurses-backend"]

[build-dependencies]
built = { version = "0.4", features = ["git2"]}

[dev-dependencies]
grin_chain = { path = "./chain", version = "0.0.2-beta.1" }
grin_store = { path = "./store", version = "0.0.2-beta.1" }
