[package]
name = "grin_chain"
version = "0.0.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Chain implementation for grin, a simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
bitcoin_hashes = "0.9.4"
bitcoin = "0.26.0"
bit-vec = "0.6"
bitvec = { version = "0.20.1" }
bitflags = "1"
byteorder = "1"
failure = "0.1"
base64 = "0.12"
failure_derive = "0.1"
croaring = { version = "0.4.5", package = "croaring-mw", features = ["compat"] }
enum_primitive = "0.1"
log = "0.4"
serde = "1"
serde_derive = "1"
chrono = "0.4.11"
lru-cache = "0.1"
lazy_static = "1"

grin_core = { path = "../core", version = "0.0.1" }
grin_keychain = { path = "../keychain", version = "0.0.1" }
grin_store = { path = "../store", version = "0.0.1" }
grin_util = { path = "../util", version = "0.0.1" }
bmw_utxo = {path = "../utxo", version = "0.0.1" }

[dev-dependencies]
env_logger = "0.7"
rand = "0.6"
