[package]
name = "grin_util"
version = "0.0.2-beta.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
sha2 = "0.9.3"
bitcoin_hashes = { version = "0.9.1" }
bitvec = { version = "0.20.1" }
backtrace = "0.3"
base64 = "0.12"
byteorder = "1"
rust-base58 = { version = "0.0.4" }
data-encoding = "2"
ed25519-dalek = "1"
sha3 = "0.8"
bech32 = { version = "0.7.2" }
byte-tools = "0.3.1"
chrono = "0.4.19"
failure = "0.1"
failure_derive = "0.1"
lazy_static = "1"
rand = "0.6"
serde = "1"
serde_derive = "1"
log4rs = { version = "0.12", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
log = "0.4"
walkdir = "2"
zip = { version = "0.5", default-features = false }
parking_lot = "0.10"
zeroize = { version = "1.1", features =["zeroize_derive"] }
grin_secp256k1zkp = { git = "https://github.com/bitcoinmw/rust-secp256k1-zkp", features = ["bullet-proof-sizing"] }
