[package]
name = "bmw_utxo"
version = "0.0.1"
authors = ["BitcoinMW Developers <bitcoinmw@protonmail.com>"]
description = "Chain implementation for grin, a simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/bitcoinmw"
keywords = [ "crypto", "mimblewimble", "bitcoinmw" ]
workspace = ".."
edition = "2018"

[dependencies]
byteorder = { version = "1.4.2" }
failure = "0.1"
failure_derive = "0.1"
rust-base58 = { version = "0.0.4" }
byte-tools = "0.3.1"
sha2 = "0.9.3"
bitcoin_hashes = { version = "0.9.1" }
bitvec = { version = "0.20.1" }
bech32 = { version = "0.7.2" }
log = { version = "0.4" }
grin_util = { path = "../util", version = "0.0.1" }

[dev-dependencies]
