[package]
name = "build_btc_utxo_set"
version = "0.0.1"
edition = "2018"
authors = ["BitcoinMW Developers <bitcoinmw@protonmail.com>"]
description = "Utility to create the initial UTXO Set from Bitcoin Core"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/bitcoinmw"
keywords = [ "crypto", "mimblewimble", "bitcoin"]
readme = "README.md"

[[bin]]
name = "gen_log"
path = "src/bin/build_btc_utxo_log.rs"

[dependencies]
structopt = { version = "0.3", default-features = false }
serde_json = "1"
serde = "1"
serde_derive = "1"
bitcoin = "0.25.0"
bitcoin_hashes = "0.9.0"
rand = "0.7.3"
secp256k1 = {version = "0.8.0", features = ["rand"]}

[dependencies.hex]
version = "=0.3.2"
