[package]
name = "gen_bin"
version = "0.0.1"
edition = "2018"
authors = ["BitcoinMW Developers <bitcoinmw@protonmail.com>"]
description = "Utility to create the initial UTXO Set from Bitcoin Core"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/bitcoinmw"
keywords = [ "crypto", "mimblewimble", "bitcoin"]
readme = "README.md"

[[bin]]
name = "gen_bin"
path = "src/bin/gen_bin.rs"

[dependencies]
structopt = { version = "0.3", default-features = false }
byteorder = { version = "1.4.2" }
num-format = "0.4.0"
rust-base58 = { version = "0.0.4" }
byte-tools = "0.3.1"
bech32 = { version = "0.7.2" }
util = { package = "grin_util", path = "../../util", version = "0.0.1" }

[dependencies.hex]
version = "=0.3.2"
