[package]
name = "gen_gen"
version = "5.1.0-alpha.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
readme = "README.md"
edition = "2018"


[[bin]]
name = "gen_gen"
path = "src/bin/gen_gen.rs"

[dependencies]
grin_miner_plugin = "0.5.2"
cuckoo_miner = "0.5.2"
curl = "0.4.19"
chrono = "0.4.11"
serde_json = "1"

grin_api = { path = "../../api" }
grin_config = { path = "../../config" }
grin_chain = { path = "../../chain" }
grin_core = { path = "../../core" }
grin_keychain = { path = "../../keychain" }
grin_p2p = { path = "../../p2p" }
grin_servers = { path = "../../servers" }
grin_util = { path = "../../util" }
grin_store = { path = "../../store" }

